RESOLVED FIXED116038
[WK2] Notification manager removal should not be tied to termination of web processes
https://bugs.webkit.org/show_bug.cgi?id=116038
Summary [WK2] Notification manager removal should not be tied to termination of web p...
Jon Lee
Reported 2013-05-13 08:56:01 PDT
Notification manager removal should not be tied to termination of web processes, because it is managed by the web context. <rdar://problem/10968680>
Attachments
Patch (2.48 KB, patch)
2013-05-13 09:01 PDT, Jon Lee
rniwa: review+
Jon Lee
Comment 1 2013-05-13 09:01:25 PDT
Jon Lee
Comment 2 2013-05-13 09:19:19 PDT
Note You need to log in before you can comment on or make changes to this bug.