[WK2] Notification manager removal should not be tied to termination of web processes https://bugs.webkit.org/show_bug.cgi?id=116038 <rdar://problem/10968680>

Reviewed by Ryosuke Niwa.

WebNotificationManagerProxy incorrectly removes the manager when web processes close.
Since it is a supplemental on the web context, the manager should only be removed
when the context is destroyed.

* UIProcess/Notifications/WebNotificationManagerProxy.cpp:
* UIProcess/Notifications/WebNotificationManagerProxy.h: Remove implementation of
processDidClose().

Canonical link: https://commits.webkit.org/134453@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150020 268f45cc-cd09-0410-ab3c-d52691b4dbfc